--- a/components/AlbumComponent/VulturesAlbumStyle.module.scss
+++ b/components/AlbumComponent/VulturesAlbumStyle.module.scss
@@ -8,11 +8,13 @@
   margin-left: 10vw;
   border: black 1px solid;
   border-radius: 5%;
+  box-shadow: 5px 5px 5px #1c1c1c;
 }
 
 .caption {
   margin-left: 20vw;
   font-size: 1.4rem;
+  margin-top: 2vh;
 }
 
 .container {
