--- a/components/AlbumList/AlbumListStyle.module.scss
+++ b/components/AlbumList/AlbumListStyle.module.scss
@@ -2,7 +2,7 @@
   font-size: 1.5rem;
   border: black solid 1px;
   width: 80%;
-  box-shadow: #1c1c1c;
+  box-shadow: 5px 5px 5px #1c1c1c;
   border-radius: 5%;
   background: #1c1c1c;
   color: white;
