--- a/components/Menu/MenuStyle.module.scss
+++ b/components/Menu/MenuStyle.module.scss
@@ -2,13 +2,17 @@
   position: absolute;
   background: #1c1c1c;
   color: white;
-  width: 50vw;
+  width: 51vw;
   height: auto;
   font-size: 2rem;
   left: 50vw;
   animation-name: menu;
-  animation-duration: 450ms;
+  animation-duration: 1s;
   animation-timing-function: ease-out;
+  border: white solid 4px;
+  border-top: none;
+  border-right: none;
+  box-shadow: 10px 5px 5px #1c1c1c;
 }
 .menuContainer li {
   margin-left: 4vw;
@@ -16,9 +20,9 @@
 
 @keyframes menu {
   from {
-    scale: 0;
+    margin-left: 300vw;
   }
   to {
-    scale: 1;
+    margin-right: 0;
   }
 }
