--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Bad+Script&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 @font-face {
     font-family: 'MyCustomFont';
     src: url('../fonts/GregorianFLF.ttf') format('truetype');
@@ -11,4 +12,10 @@
 
 * {
     font-family: 'MyCustomFont', sans-serif;
+}
+:lang(ru) {
+        font-family: "Bad Script", cursive;
+        font-weight: 400;
+        font-style: normal;
+
 }
