--- a/components/AlbumList/AlbumListStyle.module.scss
+++ b/components/AlbumList/AlbumListStyle.module.scss
@@ -1,28 +1,4 @@
-.listEl {
-  font-size: 2rem;
-  border: black solid 1px;
-  width: 65%;
-  box-shadow: 5px 5px 5px #1c1c1c;
-  border-radius: 5%;
-  background: #1c1c1c;
-  color: white;
-  margin-left: 10vw;
-  margin-top: 2vh;
-  height: auto;
-  max-width: 160vw;
-  padding-left: 5vw;
-
-
-
-}
-
-.listEl button {
-  position: absolute;
-
-  left: 79vw;
-  color: black;
-  border: black solid 1px;
-  box-shadow: 5px 5px 5px #1c1c1c;
-  background: white;
+.container {
+  margin-left: 8vw;
 }
 
