--- a/app/concerts/ConcertsStyle.module.scss
+++ b/app/concerts/ConcertsStyle.module.scss
@@ -1,6 +1,7 @@
-.title {
-  font-size: 2rem;
-  margin-top: 20vh;
-  margin-left: 10vw;
-
+.container {
+  @media (min-width:801px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
 }
